# DeployAnyFile

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.env.example  deploy.sh  docker-compose.yml  upload.env.example  upload.sh
backend/: .gitignore  Cargo.toml
backend/migrations/: 0001_init.sql  0002_api_tokens.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  state.rs  util.rs
backend/src/data/uploads/: 36358b36-8947-4abe-8e1f-679e91156325.html  eaecd5be-07fb-46f8-99b1-1eb46fff867f.md
backend/src/handlers/: auth.rs  files.rs  mod.rs  public.rs  tokens.rs  users.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  format.js  router.js  store.js  style.css  toast.js
frontend/src/components/: Modal.vue
frontend/src/views/: Admin.vue  Home.vue  Login.vue  Preview.vue  Register.vue  Tokens.vue
