[package]
name = "deployanyfile"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deployanyfile"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
jsonwebtoken = "9"
bcrypt = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
